exports[`BpkSponsoredBadge should render correctly 1`] = `
<div
  className="bpk-sponsored-badge">
  <small>
    Sponsored
  </small>
  <div />
</div>
`;

exports[`BpkSponsoredBadge should render correctly with a "docked-left" attribute 1`] = `
<div
  className="bpk-sponsored-badge bpk-sponsored-badge--docked-left">
  <small>
    Sponsored
  </small>
  <div />
</div>
`;

exports[`BpkSponsoredBadge should render correctly with a "docked-right" attribute 1`] = `
<div
  className="bpk-sponsored-badge bpk-sponsored-badge--docked-right">
  <small>
    Sponsored
  </small>
  <div />
</div>
`;

exports[`BpkSponsoredBadge should render correctly with a "sponsored text" attribute set to Spanish 1`] = `
<div
  className="bpk-sponsored-badge">
  <small>
    Promociando
  </small>
  <div />
</div>
`;
